# mathematical-algorithms

./: .gitignore  LICENSE  mathematical-algorithms.cabal
app/: Main.hs
src/: Poly.hs  PolyFast.hs
