cabal-version:      3.0
name:               mathematical-algorithms
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
-- copyright:
category:           Math
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
    build-depends:
        base ^>=4.17.2.1,
        vector,
        random,
        timeit,

library
    import:           warnings, deps
    exposed-modules:
        Poly
    hs-source-dirs:   src
    default-language: GHC2021

executable mathematical-algorithms
    import:           warnings, deps
    main-is:          Main.hs
    -- other-modules:
    build-depends:
        mathematical-algorithms
    hs-source-dirs:   app
    default-language: GHC2021
